--- a/app/views/layouts/translator.html.erb
+++ b/app/views/layouts/translator.html.erb
@@ -4,13 +4,7 @@
   <head>
     <title>Translator</title>
     <%= csrf_meta_tag %>
-    <%= stylesheet_link_tag "chosen", :media => "all" %>
-    <%= stylesheet_link_tag "bootstrap", :media => "all" %>
-    
-    <%= javascript_include_tag "jquery" %>
-    <%= javascript_include_tag "bootstrap" %>
-    <%= javascript_include_tag "chosen" %>
-    <%= javascript_include_tag "jquery.autosize-min" %>
+    <%= stylesheet_link_tag "translator", :media => "all" %>
     <%= javascript_include_tag "translator" %>
     
   </head>
