--- a/app/views/translator/translations/index.html.erb
+++ b/app/views/translator/translations/index.html.erb
@@ -4,9 +4,7 @@
         <%= form_tag translations_path, :method => "get" do %>
           <%= label_tag :key, "Filter: " %>
           <%= text_field_tag :search, params[:search], :placeholder => "Search for text..." %>
-          <%# select_tag :key, options_for_select(@sections.collect {|k| [k.humanize, k]}.unshift(["All sections", nil]), params[:key]) %>
-          <%# select_tag :group, options_for_select(@groups.collect {|k| [k.humanize, k]}.unshift(["All groups", nil]), params[:group]) %>
-          <%= select_tag :translated, options_for_select([["Translation state", nil], ['Fully translated', '1'], ['Missing translations', '0']], params[:translated]) %>
+          <%= select_tag :translated, options_for_select([["Translation state", nil], ['Fully translated', '1'], ['Missing translations', '0']], params[:translated]), class: 'select2' %>
           <%= submit_tag "Submit", :class => "btn btn-primary" %>
         <% end %>
     </div>
@@ -58,9 +56,12 @@
 </div>
 
 <script type="text/javascript">
-  $("a[data-recover]").live("click", function(event) {
+  $("a[data-recover]").click( function(event) {
     event.preventDefault();
-    $("input[type='text']", $(this).parents("form")).val($(this).attr("data-recover"));
+    console.log($( this ).parents("form"));
+    console.log($("input[type='text']", $( this ).parents("form")));
+    console.log($( this ).attr("data-recover"));
+    $("input[type='text']", $( this ).parents("form")).val($( this ).attr("data-recover"));
   });
 </script>
 
