--- a/app/assets/stylesheets/translator.scss
+++ b/app/assets/stylesheets/translator.scss
@@ -4,3 +4,20 @@
  *= require select2
  *= require select2-bootstrap
 */
+form.translate {
+  margin-bottom: 10px;
+}
+div.locale {
+  width: 30px;
+  padding-top: 15px;
+}
+div.buttons {
+  padding-top: 5px;
+  margin-left: 10px;
+}
+div.translation, div.locale, div.buttons {
+  float:left;
+}
+div.clear {
+  clear: both;
+}
