--- a/app/views/translator/translations/index.html.erb
+++ b/app/views/translator/translations/index.html.erb
@@ -3,6 +3,7 @@
     <div class="navbar-inner">
         <%= form_tag translations_path, :method => "get" do %>
           <%= label_tag :key, "Filter: " %>
+          <%= text_field_tag :key, params[:key], :placeholder => "By key..." %>
           <%= text_field_tag :search, params[:search], :placeholder => "Search for text..." %>
           <%= select_tag :translated, options_for_select([["Translation state", nil], ['Fully translated', '1'], ['Missing translations', '0']], params[:translated]), class: 'select2' %>
           <%= submit_tag "Submit", :class => "btn btn-primary" %>
@@ -64,4 +65,3 @@
     $("input[type='text']", $( this ).parents("form")).val($( this ).attr("data-recover"));
   });
 </script>
-
